--- a/css/style.css
+++ b/css/style.css
@@ -179,3 +179,74 @@ button[type="reset"] {
     }
 }
 
+.hit {
+    background-color: white;
+    color: black;
+    border-bottom: solid 4px;
+    text-align: center;
+    padding: 13px;
+    text-align: center;
+}
+
+button[type="tugas1"] {
+    background-color: green;
+    color: lime;
+    border-bottom: solid 2px;
+    text-align: center;
+    padding: 13px;
+   margin-left: 600px
+}
+
+button[type="kembali"] {
+    background-color: white;
+    color: black;
+    border-bottom: solid 2px;
+    text-align: center;
+    padding: 13px;
+    text-align: center;
+    margin-left: 50%;
+    margin-top: 15px;
+}
+
+.judul-mean {
+    background-color: green;
+    color: lime;
+    display: inline-block;
+    padding: 10px 20px;
+    margin: 0;
+    border-bottom-right-radius: 5px;
+    margin-bottom: 20px;
+    font-size: 30px;
+    text-align: center;
+    width: 100%;
+    padding: 15px;
+}
+
+.isi-mean {
+    font-size: 20px;
+    width: 60%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 30px 40px;
+    border-radius: 5px;
+    background-color:green;
+    border: solid 3px lime;
+    border-radius: 5px;
+    font-family: Helvetica;
+}
+
+.tampil-mean {
+    margin-top: 20px;
+    font-size: 20px;
+    width: 60%;
+    text-align: center;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 30px 40px;
+    border-radius: 5px;
+    background-color:green;
+    border: solid 3px lime;
+    border-radius: 5px;
+    font-family: Helvetica;
+}
